Spacing fix for social buttons

--- a/public_html/assets/src/css/sections/main-nav.css
+++ b/public_html/assets/src/css/sections/main-nav.css
@@ -176,7 +176,7 @@
 		width: 30px;
 	}
 	#masthead .social-buttons a {
-		margin: 0;
+		margin: 0 0 0 auto;
 	}
 	.social-buttons svg {
 		width: 60%;
